compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__custom_types__depreacted_constructor_deprecate_all_varients.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
assertion_line: 68
expression: "\n@deprecated(\"2\")\npub type Numbers {\n  @deprecated(\"1\")\n  One\n  Two\n}\n\npub fn num() {\n  let _two = Two\n  Nil\n}\n"
---
warning: Deprecated value used
   ┌─ /src/warning/wrn.gleam:10:14
   │
10 │   let _two = Two
   │              ^^^ This value has been deprecated

It was deprecated with this message: 2
