compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__custom_types__depreacted_type_deprecate_varient_err.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
assertion_line: 68
expression: "\n@deprecated(\"2\")\npub type Numbers {\n  @deprecated(\"1\")\n  One\n  Two\n}\n\npub fn num() {\n  let _two = Two\n  Nil\n}\n"
---
error: Deprecating variants of a type that is deprecated is not allowed
  ┌─ /src/one/two.gleam:5:3
  │
5 │   One
  │   ^^^

Consider removing the deprecation attribute on the type's variant.
