compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__custom_types__deprecated_all_varients_type.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
assertion_line: 35
expression: "\npub type Numbers {\n  @deprecated(\"1\")\n  One\n  @deprecated(\"2\")\n  Two\n}\n"
---
error: Deprecating all variants of a type is not allowed.
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub type Numbers {
  │ ^^^^^^^^^^^^^^^^

Consider deprecating the type as a whole.

    @deprecated("message")
    type Wibble {
        Wobble1
        Wobble2
    }
