compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__custom_types__deprecated_type.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
expression: "\n@deprecated(\"Dont use this!\")\npub type Cat {\n  Cat(name: String, cuteness: Int)\n}\n\npub fn name() -> String {\n  let c = Cat(\"Numi\", 20)\n  c.name\n}\n        "
---

warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:8:11
  │
8 │   let c = Cat("Numi", 20)
  │           ^^^ This value has been deprecated

It was deprecated with this message: Dont use this!

