compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__custom_types__pattern_match_correct_pos_field.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
expression: "\ntype Fish {\n  Starfish()\n  Jellyfish(String, Bool)\n}\n\nfn handle_fish(fish: Fish) {\n  case fish {\n    Starfish() -> False\n    Jellyfish(jiggly) -> jiggly\n  }\n}\n"
---
----- SOURCE CODE

type Fish {
  Starfish()
  Jellyfish(String, Bool)
}

fn handle_fish(fish: Fish) {
  case fish {
    Starfish() -> False
    Jellyfish(jiggly) -> jiggly
  }
}


----- ERROR
error: Incorrect arity
   ┌─ /src/one/two.gleam:10:5
   │
10 │     Jellyfish(jiggly) -> jiggly
   │     ^^^^^^^^^^^^^^^^^ Expected 2 arguments, got 1


error: Type mismatch
   ┌─ /src/one/two.gleam:10:5
   │
10 │     Jellyfish(jiggly) -> jiggly
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Bool

Found type:

    String
